src/test/deca/codegen/valid/object_method_redefinition.deca
/*
    Description : Redéfinition d'une méthode (programme

    Résultat : OK (programme p208 du poly)
*/
class A{
    void m(){}
    void p(){}
}
class B extends A{
    void p(){}
    void q(){}
}
